--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "@babel/core": "^7.6.4",
         "@babel/plugin-proposal-object-rest-spread": "^7.6.2",
         "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+        "@babel/polyfill": "^7.12.1",
         "@babel/preset-env": "^7.6.3",
         "@commitlint/cli": "^8.2.0",
         "@commitlint/config-conventional": "^8.2.0",
@@ -37,6 +38,7 @@
         "css-loader": "^5.0.1",
         "easy-icon": "^1.0.8",
         "element-ui": "^2.14.1",
+        "emoji-js": "^3.5.0",
         "eslint": "^6.5.1",
         "eslint-config-standard": "^14.1.0",
         "eslint-loader": "^3.0.2",
@@ -57,6 +59,7 @@
         "lint-staged": "^9.4.2",
         "mini-css-extract-plugin": "^0.9.0",
         "optimize-css-assets-webpack-plugin": "^5.0.3",
+        "showdown": "^1.9.1",
         "style-loader": "^1.1.3",
         "url-loader": "^4.0.0",
         "vue": "^2.6.12",
