--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "comment",
-    "version": "0.0.1",
-    "description": "Ebuild project",
+    "name": "tc-comment",
+    "version": "0.0.2",
+    "description": "A comment component",
     "main": "comment.min.js",
     "unpkg": "comment.min.js",
     "jsdelivr": "comment.min.js",
@@ -51,6 +51,7 @@
         "gulp": "^4.0.2",
         "gulp-babel": "^8.0.0",
         "gulp-rename": "^2.0.0",
+        "highlight.js": "^10.5.0",
         "html-loader": "^1.0.0",
         "html-webpack-plugin": "^4.0.3",
         "husky": "^3.0.9",
@@ -60,7 +61,7 @@
         "mini-css-extract-plugin": "^0.9.0",
         "optimize-css-assets-webpack-plugin": "^5.0.3",
         "showdown": "^1.9.1",
-        "style-loader": "^1.1.3",
+        "style-loader": "^1.3.0",
         "url-loader": "^4.0.0",
         "vue": "^2.6.12",
         "vue-loader": "^15.9.6",
