--- a/npm/package.json
+++ b/npm/package.json
@@ -1,6 +1,6 @@
 {
     "name": "tc-comment",
-    "version": "0.0.9",
+    "version": "0.0.10",
     "description": "A comment component",
     "main": "comment.min.js",
     "scripts": {
@@ -21,7 +21,7 @@
     "author": "author",
     "license": "MIT",
     "bugs": {
-        "url": ""
+        "url": "https://github.com/theajack/comment/issues/new"
     },
     "homepage": ""
 }
