--- a/npm/package.json
+++ b/npm/package.json
@@ -1,8 +1,8 @@
 {
     "name": "tc-comment",
-    "version": "0.0.13",
-    "description": "A comment component",
-    "main": "comment.min.js",
+    "version": "0.0.14",
+    "description": "A comment component that supports markdowm and emoji, without any configuration, no need to apply for any account, it can be used immediately",
+    "main": "tc-comment.min.js",
     "scripts": {
         "dev": "webpack-dev-server --open --config webpack-config/dev.js",
         "start": "npm run dev",
@@ -10,14 +10,19 @@
         "publish": "npm publish npm",
         "lint": "eslint src --ext js"
     },
-    "unpkg": "comment.min.js",
-    "jsdelivr": "comment.min.js",
+    "unpkg": "tc-comment.min.js",
+    "jsdelivr": "tc-comment.min.js",
     "typings": "index.d.ts",
     "repository": {
         "type": "git",
         "url": ""
     },
-    "keywords": [],
+    "keywords": [
+        "comment component",
+        "emoji",
+        "markdowm",
+        "no account"
+    ],
     "author": "author",
     "license": "MIT",
     "bugs": {
